--- a/ArXiv_CS_Papers_and_Citation_Graph.ipynb
+++ b/ArXiv_CS_Papers_and_Citation_Graph.ipynb
@@ -45,8 +45,7 @@
      "iopub.status.idle": "2024-05-05T06:56:04.078631Z",
      "shell.execute_reply": "2024-05-05T06:56:04.076449Z",
      "shell.execute_reply.started": "2024-05-05T06:56:02.237114Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1684,6 +1683,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The python code below will create a categories file based on the original but its structure will be: nodeID    node_label1 node_label2 ...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categories_file_path = \"graph-v2/group.txt\"  # Replace with your actual input filename\n",
+    "output_filename = \"graph-v2/group-v2.txt\"\n",
+    "\n",
+    "with open(categories_file_path, \"r\") as infile, open(output_filename, \"w\") as outfile:\n",
+    "    for node_id, line in enumerate(infile):\n",
+    "        labels = line.strip().split(\",\")  # Split labels by comma\n",
+    "        outfile.write(f\"{node_id} {' '.join(labels)}\\n\")\n",
+    "\n",
+    "print(f\"File '{output_filename}' created successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python code below augments the original graph with the two and three hop neighborhood of each node "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def augment_graph(graph_file, output_file):\n",
+    "    # Step 1: Read the graph into an adjacency list\n",
+    "    adjacency_list = defaultdict(set)\n",
+    "    \n",
+    "    with open(graph_file, 'r') as f:\n",
+    "        for line in f:\n",
+    "            node1, node2 = map(int, line.strip().split())\n",
+    "            adjacency_list[node1].add(node2)\n",
+    "            adjacency_list[node2].add(node1)  # Assuming an undirected graph\n",
+    "    \n",
+    "    new_edges = set()\n",
+    "    \n",
+    "    # Step 2: Find and add 2-hop and 3-hop edges\n",
+    "    for node in adjacency_list:\n",
+    "        first_hop = adjacency_list[node]\n",
+    "        second_hop = set()\n",
+    "        third_hop = set()\n",
+    "        \n",
+    "        for neighbor in first_hop:\n",
+    "            second_hop.update(adjacency_list[neighbor])\n",
+    "        second_hop.discard(node)  # Remove direct self-loops\n",
+    "        second_hop -= first_hop  # Remove already existing edges\n",
+    "        \n",
+    "        for second_neighbor in second_hop:\n",
+    "            third_hop.update(adjacency_list[second_neighbor])\n",
+    "        third_hop.discard(node)\n",
+    "        third_hop -= first_hop\n",
+    "        third_hop -= second_hop  # Remove already added edges\n",
+    "        \n",
+    "        # Store new edges (avoid duplicates by using sorted tuple)\n",
+    "        for neighbor in second_hop:\n",
+    "            new_edges.add(tuple(sorted([node, neighbor])))\n",
+    "        for neighbor in third_hop:\n",
+    "            new_edges.add(tuple(sorted([node, neighbor])))\n",
+    "    \n",
+    "    # Step 3: Write the augmented graph to the output file\n",
+    "    with open(output_file, 'w') as f:\n",
+    "        for node1 in adjacency_list:\n",
+    "            for node2 in adjacency_list[node1]:\n",
+    "                f.write(f\"{node1} {node2}\\n\")\n",
+    "        for node1, node2 in new_edges:\n",
+    "            f.write(f\"{node1} {node2}\\n\")\n",
+    "\n",
+    "# Example usage:\n",
+    "# augment_graph(\"graph.txt\", \"augmented_graph.txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The python code below concatenates the keywords with the specific categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concatenate_files(file1, file2, output_file):\n",
+    "    with open(file1, 'r', encoding='utf-8') as f1, open(file2, 'r', encoding='utf-8') as f2, open(output_file, 'w', encoding='utf-8') as out:\n",
+    "        for line1, line2 in zip(f1, f2):\n",
+    "            out.write(f\"{line1.strip()} {line2.strip()}\\n\")\n",
+    "\n",
+    "# Example usage:\n",
+    "# concatenate_files(\"keywords.txt\", \"categories.txt\", \"output.txt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Categories Dictionaries"
    ]
   },
@@ -1965,8 +2070,7 @@
      "iopub.status.idle": "2024-05-05T06:56:04.094832Z",
      "shell.execute_reply": "2024-05-05T06:56:04.093017Z",
      "shell.execute_reply.started": "2024-05-05T06:56:04.081419Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2082,8 +2186,7 @@
      "iopub.status.idle": "2024-05-05T06:56:04.146833Z",
      "shell.execute_reply": "2024-05-05T06:56:04.145351Z",
      "shell.execute_reply.started": "2024-05-05T06:56:04.099044Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2258,8 +2361,7 @@
      "iopub.status.idle": "2024-05-05T06:56:16.607245Z",
      "shell.execute_reply": "2024-05-05T06:56:16.606249Z",
      "shell.execute_reply.started": "2024-05-05T06:56:04.149645Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2339,8 +2441,7 @@
      "iopub.status.idle": "2024-05-05T06:56:16.767483Z",
      "shell.execute_reply": "2024-05-05T06:56:16.766596Z",
      "shell.execute_reply.started": "2024-05-05T06:56:16.608782Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2710,8 +2811,7 @@
      "iopub.status.idle": "2024-05-05T06:56:16.775927Z",
      "shell.execute_reply": "2024-05-05T06:56:16.775082Z",
      "shell.execute_reply.started": "2024-05-05T06:56:16.771355Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2734,8 +2834,7 @@
      "iopub.status.idle": "2024-05-05T06:56:29.739545Z",
      "shell.execute_reply": "2024-05-05T06:56:29.738289Z",
      "shell.execute_reply.started": "2024-05-05T06:56:16.778201Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -104621,8 +104720,7 @@
      "iopub.status.idle": "2024-05-05T06:56:31.000212Z",
      "shell.execute_reply": "2024-05-05T06:56:30.998962Z",
      "shell.execute_reply.started": "2024-05-05T06:56:30.990358Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104663,8 +104761,7 @@
      "iopub.status.idle": "2024-05-05T06:56:31.016930Z",
      "shell.execute_reply": "2024-05-05T06:56:31.015623Z",
      "shell.execute_reply.started": "2024-05-05T06:56:31.002070Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104681,8 +104778,7 @@
      "iopub.status.idle": "2024-05-05T06:57:37.401197Z",
      "shell.execute_reply": "2024-05-05T06:57:37.400000Z",
      "shell.execute_reply.started": "2024-05-05T06:56:31.018931Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -104722,8 +104818,7 @@
      "iopub.status.idle": "2024-05-05T06:57:37.419024Z",
      "shell.execute_reply": "2024-05-05T06:57:37.417659Z",
      "shell.execute_reply.started": "2024-05-05T06:57:37.403616Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104792,8 +104887,7 @@
      "iopub.status.idle": "2024-05-05T07:03:19.209577Z",
      "shell.execute_reply": "2024-05-05T07:03:19.208433Z",
      "shell.execute_reply.started": "2024-05-05T07:03:19.145934Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104815,8 +104909,7 @@
      "iopub.status.idle": "2024-05-05T07:03:20.177653Z",
      "shell.execute_reply": "2024-05-05T07:03:20.176311Z",
      "shell.execute_reply.started": "2024-05-05T07:03:19.462977Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104833,8 +104926,7 @@
      "iopub.status.idle": "2024-05-05T07:03:20.187507Z",
      "shell.execute_reply": "2024-05-05T07:03:20.186543Z",
      "shell.execute_reply.started": "2024-05-05T07:03:20.180942Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104860,8 +104952,7 @@
      "iopub.status.idle": "2024-05-05T07:03:20.878272Z",
      "shell.execute_reply": "2024-05-05T07:03:20.876598Z",
      "shell.execute_reply.started": "2024-05-05T07:03:20.375238Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104878,8 +104969,7 @@
      "iopub.status.idle": "2024-05-05T07:03:20.908508Z",
      "shell.execute_reply": "2024-05-05T07:03:20.904751Z",
      "shell.execute_reply.started": "2024-05-05T07:03:20.881337Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104911,8 +105001,7 @@
      "iopub.status.idle": "2024-05-05T07:03:21.345484Z",
      "shell.execute_reply": "2024-05-05T07:03:21.344275Z",
      "shell.execute_reply.started": "2024-05-05T07:03:21.339578Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [],
    "source": [
@@ -104929,8 +105018,7 @@
      "iopub.status.idle": "2024-05-05T07:03:21.808538Z",
      "shell.execute_reply": "2024-05-05T07:03:21.807374Z",
      "shell.execute_reply.started": "2024-05-05T07:03:21.796391Z"
-    },
-    "trusted": true
+    }
    },
    "outputs": [
     {
@@ -105104,7 +105192,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "ArXiv_Papers_and_Citation_Network",
+   "display_name": "ArXiv_Citation_Network",
    "language": "python",
    "name": "python3"
   },
