--- a/ArXiv_CS_Papers_and_Citation_Graph.ipynb
+++ b/ArXiv_CS_Papers_and_Citation_Graph.ipynb
@@ -9,23 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from tqdm.notebook import tqdm\n",
     "import gc\n",
-    "from scipy import sparse\n",
-    "import random\n",
-    "\n",
-    "from collections import Counter, defaultdict\n",
     "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path\n",
+    "import random\n",
     "import shutil\n",
     "import networkx as nx\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "from collections import Counter, defaultdict\n",
+    "from tqdm.notebook import tqdm\n",
+    "from collections import defaultdict\n",
+    "from scipy import sparse\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -1688,12 +1689,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File 'graph-v2/Multi_Label_Categories-v2.txt' created successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "categories_file_path = \"graph-v2/group.txt\"  # Replace with your actual input filename\n",
-    "output_filename = \"graph-v2/group-v2.txt\"\n",
+    "categories_file_path = \"graph-v2/Multi_Label_Categories.txt\"  # Replace with your actual input filename\n",
+    "output_filename = \"graph-v2/Multi_Label_Categories-v2.txt\"\n",
     "\n",
     "with open(categories_file_path, \"r\") as infile, open(output_filename, \"w\") as outfile:\n",
     "    for node_id, line in enumerate(infile):\n",
@@ -1712,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,43 +1733,43 @@
     "        for line in f:\n",
     "            node1, node2 = map(int, line.strip().split())\n",
     "            adjacency_list[node1].add(node2)\n",
-    "            adjacency_list[node2].add(node1)  # Assuming an undirected graph\n",
+    "            adjacency_list[node2].add(node1)  # An undirected graph\n",
     "    \n",
     "    new_edges = set()\n",
     "    \n",
     "    # Step 2: Find and add 2-hop and 3-hop edges\n",
     "    for node in adjacency_list:\n",
-    "        first_hop = adjacency_list[node]\n",
+    "        first_hop = adjacency_list[node] # Take all neighbors of \"node\" \n",
     "        second_hop = set()\n",
-    "        third_hop = set()\n",
+    "        #third_hop = set()\n",
     "        \n",
     "        for neighbor in first_hop:\n",
     "            second_hop.update(adjacency_list[neighbor])\n",
     "        second_hop.discard(node)  # Remove direct self-loops\n",
     "        second_hop -= first_hop  # Remove already existing edges\n",
     "        \n",
-    "        for second_neighbor in second_hop:\n",
+    "        \"\"\" for second_neighbor in second_hop:\n",
     "            third_hop.update(adjacency_list[second_neighbor])\n",
     "        third_hop.discard(node)\n",
     "        third_hop -= first_hop\n",
-    "        third_hop -= second_hop  # Remove already added edges\n",
+    "        third_hop -= second_hop  # Remove already added edges \"\"\"\n",
     "        \n",
     "        # Store new edges (avoid duplicates by using sorted tuple)\n",
     "        for neighbor in second_hop:\n",
     "            new_edges.add(tuple(sorted([node, neighbor])))\n",
-    "        for neighbor in third_hop:\n",
-    "            new_edges.add(tuple(sorted([node, neighbor])))\n",
+    "        #for neighbor in third_hop:\n",
+    "            #new_edges.add(tuple(sorted([node, neighbor])))\n",
     "    \n",
     "    # Step 3: Write the augmented graph to the output file\n",
-    "    with open(output_file, 'w') as f:\n",
-    "        for node1 in adjacency_list:\n",
-    "            for node2 in adjacency_list[node1]:\n",
-    "                f.write(f\"{node1} {node2}\\n\")\n",
+    "    with open(output_file, 'a') as f:\n",
+    "        #for node1 in adjacency_list:\n",
+    "        #    for node2 in adjacency_list[node1]:\n",
+    "        #        f.write(f\"{node1} {node2}\\n\")\n",
     "        for node1, node2 in new_edges:\n",
     "            f.write(f\"{node1} {node2}\\n\")\n",
     "\n",
     "# Example usage:\n",
-    "# augment_graph(\"graph.txt\", \"augmented_graph.txt\")\n"
+    "augment_graph(\"graph-v2/graph.txt\", \"graph-v2/graph-2h.txt\")\n"
    ]
   },
   {
@@ -1782,7 +1791,7 @@
     "            out.write(f\"{line1.strip()} {line2.strip()}\\n\")\n",
     "\n",
     "# Example usage:\n",
-    "# concatenate_files(\"keywords.txt\", \"categories.txt\", \"output.txt\")"
+    "concatenate_files(\"graph-v2/data.txt\", \"graph-v2/Specific_Categories.txt\", \"graph-v2/data-v2.txt\")"
    ]
   },
   {
