--- a/ArXiv_CS_Papers_and_Citation_Graph.ipynb
+++ b/ArXiv_CS_Papers_and_Citation_Graph.ipynb
@@ -55,6 +55,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://arxiv.org/pdf/0704.1028"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
