--- a/Extract_CS_Papers.ipynb
+++ b/Extract_CS_Papers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_pdf(url):\n",
+    "def download_pdf(paper_id):\n",
+    "    url = f\"https://arxiv.org/pdf/{paper_id}\"\n",
     "    response = requests.get(url)\n",
     "    if response.status_code == 200:\n",
     "        return io.BytesIO(response.content)\n",
     "    else:\n",
-    "        raise Exception(f\"Failed to download PDF. Status code: {response.status_code}\")\n",
+    "        raise None #Exception(f\"Failed to download PDF. Status code: {response.status_code}\")\n",
     "\n",
     "def extract_text_from_pdf(pdf_stream):\n",
-    "    doc = fitz.open(\"pdf\", pdf_stream)  # Open PDF from memory\n",
-    "    text = \"\"\n",
-    "    for page in doc:\n",
-    "        text += page.get_text(\"text\") + \"\\n\"  # Extract text from each page\n",
-    "    return text\n",
+    "    if not pdf_stream:\n",
+    "        return None  # Failed to download\n",
+    "    \n",
+    "    try:\n",
+    "        doc = fitz.open(\"pdf\", pdf_stream)\n",
+    "        text = \"\"\n",
+    "        for page in doc:\n",
+    "            text += page.get_text(\"text\") + \"\\n\"\n",
+    "        return text if text.strip() else None  # Return None if empty\n",
+    "    except:\n",
+    "        return None  # Failed to extract text\n",
     "\n",
     "def extract_introduction(text, word_limit=400):\n",
     "    lines = text.split(\"\\n\")\n",
@@ -84,20 +91,32 @@
     "    # Fix inline hyphenated words (e.g., \"poten- tially\" → \"potentially\")\n",
     "    cleaned_text = re.sub(r'(\\w+)-\\s+(\\w+)', r'\\1\\2', \" \".join(extracted_text))\n",
     "\n",
-    "    return cleaned_text.strip() if cleaned_text else \"Introduction section not found.\"\n",
+    "    return cleaned_text.strip() if cleaned_text.strip() else None\n",
     "\n",
     "\n",
-    "def process_pdf(url):\n",
+    "def process_pdf(paper_id):\n",
     "    try:\n",
-    "        pdf_stream = download_pdf(url)\n",
+    "        pdf_stream = download_pdf(paper_id)\n",
+    "        if not pdf_stream:\n",
+    "            print(f\"{paper_id} failed to download.\")\n",
+    "            return None\n",
+    "        \n",
     "        #start_time = datetime.now()\n",
     "        text = extract_text_from_pdf(pdf_stream)\n",
+    "        if text is None: \n",
+    "            print(f\"Failed to extract text from {paper_id}.\")\n",
+    "            return None\n",
+    "        \n",
     "        introduction_text = extract_introduction(text)\n",
+    "        if introduction_text is None:\n",
+    "            print(f\"Failed to extract text from introduction sec. for {paper_id}.\")\n",
+    "            return None\n",
+    "        \n",
     "        #end_time = datetime.now()\n",
     "        #print((end_time - start_time).total_seconds())\n",
     "        return introduction_text\n",
     "    except Exception as e:\n",
-    "        return str(e)"
+    "        return None #f\"Error: {str(e)}\""
    ]
   },
   {
@@ -106,10 +125,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_url = \"https://arxiv.org/pdf/0704.1274\"  # Replace with your actual PDF URL\n",
-    "intro_text = process_pdf(pdf_url)\n",
-    "print(\"==================================================\")\n",
-    "print(intro_text)"
+    "def update_output_file(output_file, successful_retries):\n",
+    "    # Read the file into a list\n",
+    "    with open(output_file, \"r\") as f:\n",
+    "        lines = f.readlines()  # Read all lines\n",
+    "\n",
+    "    # Update the correct indices\n",
+    "    for index, new_text in successful_retries:\n",
+    "        if 0 <= index < len(lines):  # Ensure index is valid\n",
+    "            lines[index] = new_text.strip() + \"\\n\\n\"  # Ensure proper formatting\n",
+    "    \n",
+    "    # Write back the updated lines\n",
+    "    with open(output_file, \"w\") as f:\n",
+    "        f.writelines(lines)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paper_ids = [\"0704.1274\", \"0704.1028\", \"0704.0954\", \"0704.1308\"]\n",
+    "successful_retries = []\n",
+    "\n",
+    "for paper_id in paper_ids:\n",
+    "    intro_text = process_pdf(paper_id)\n",
+    "    if intro_text:\n",
+    "        print(f\"\\n==================================================\")\n",
+    "        print(intro_text)\n",
+    "        print(f\"==================================================\\n\")\n",
+    "        #successful_retries.append((idx, intro_text))"
    ]
   },
   {
@@ -213,7 +259,7 @@
     "    \n",
     "    with open(output_file, \"w\") as f:\n",
     "        for text in results:\n",
-    "            f.write(text + \"\\n\")\n",
+    "            f.write(text + \"\\n\\n\")\n",
     "    \n",
     "    with open(\"Failed_papers.txt\", \"w\") as f:\n",
     "        f.write(\"Failed Downloads:\\n\")\n",
