--- a/Extract_CS_Papers.ipynb
+++ b/Extract_CS_Papers.ipynb
@@ -67,31 +67,29 @@
     "    introduction_found = False\n",
     "    extracted_text = []\n",
     "    word_count = 0\n",
-    "\n",
-    "    # Pattern for section title with numbering\n",
-    "    section_pattern = re.compile(r'^\\s*(\\d+\\.|[IVXLCDM]+\\.|[A-Z]\\.)\\s+(INTRODUCTION|Introduction)\\s*$')\n",
-    "\n",
+    "    \n",
+    "    section_pattern = re.compile(r'^\\s*(\\d+\\.?|[IVXLCDM]+\\.?|[A-Z]\\.?)\\s+(INTRODUCTION|Introduction)\\s*$')\n",
+    "    \n",
     "    for line in lines:\n",
     "        if not introduction_found:\n",
-    "            # Check if the line matches an Introduction section title\n",
     "            if section_pattern.match(line):\n",
     "                introduction_found = True\n",
     "        else:\n",
-    "            # Split line into words and keep punctuation/symbols\n",
     "            words = line.split()\n",
-    "            if word_count + len(words) > word_limit:\n",
-    "                # Take only the words needed to reach the limit\n",
-    "                words = words[: word_limit - word_count]\n",
-    "                extracted_text.append(\" \".join(words))\n",
-    "                break  # Stop once the limit is reached\n",
-    "            else:\n",
-    "                extracted_text.append(line)\n",
-    "                word_count += len(words)\n",
-    "\n",
-    "    # Fix inline hyphenated words (e.g., \"poten- tially\" → \"potentially\")\n",
+    "            try:\n",
+    "                if word_count + len(words) > word_limit:\n",
+    "                    words = words[: word_limit - word_count]\n",
+    "                    extracted_text.append(\" \".join(words))\n",
+    "                    break\n",
+    "                else:\n",
+    "                    extracted_text.append(line)\n",
+    "                    word_count += len(words)\n",
+    "            except Exception:\n",
+    "                break  # Stop if an error occurs\n",
+    "    \n",
     "    cleaned_text = re.sub(r'(\\w+)-\\s+(\\w+)', r'\\1\\2', \" \".join(extracted_text))\n",
+    "    return cleaned_text.strip() if cleaned_text.strip() else None  # None if intro not found\n",
     "\n",
-    "    return cleaned_text.strip() if cleaned_text.strip() else None\n",
     "\n",
     "\n",
     "def process_pdf(paper_id):\n",
@@ -198,7 +196,7 @@
     "    extracted_text = []\n",
     "    word_count = 0\n",
     "    \n",
-    "    section_pattern = re.compile(r'^\\s*(\\d+\\.|[IVXLCDM]+\\.|[A-Z]\\.)\\s+(INTRODUCTION|Introduction)\\s*$')\n",
+    "    section_pattern = re.compile(r'^\\s*(\\d+\\.?|[IVXLCDM]+\\.?|[A-Z]\\.?)\\s+(INTRODUCTION|Introduction)\\s*$')\n",
     "    \n",
     "    for line in lines:\n",
     "        if not introduction_found:\n",
@@ -206,13 +204,16 @@
     "                introduction_found = True\n",
     "        else:\n",
     "            words = line.split()\n",
-    "            if word_count + len(words) > word_limit:\n",
-    "                words = words[: word_limit - word_count]\n",
-    "                extracted_text.append(\" \".join(words))\n",
-    "                break\n",
-    "            else:\n",
-    "                extracted_text.append(line)\n",
-    "                word_count += len(words)\n",
+    "            try:\n",
+    "                if word_count + len(words) > word_limit:\n",
+    "                    words = words[: word_limit - word_count]\n",
+    "                    extracted_text.append(\" \".join(words))\n",
+    "                    break\n",
+    "                else:\n",
+    "                    extracted_text.append(line)\n",
+    "                    word_count += len(words)\n",
+    "            except Exception:\n",
+    "                break  # Stop if an error occurs\n",
     "    \n",
     "    cleaned_text = re.sub(r'(\\w+)-\\s+(\\w+)', r'\\1\\2', \" \".join(extracted_text))\n",
     "    return cleaned_text.strip() if cleaned_text.strip() else None  # None if intro not found\n",
@@ -259,7 +260,7 @@
     "    \n",
     "    with open(output_file, \"w\") as f:\n",
     "        for text in results:\n",
-    "            f.write(text + \"\\n\\n\")\n",
+    "            f.write(text + \"\\n\")\n",
     "    \n",
     "    with open(\"Failed_papers.txt\", \"w\") as f:\n",
     "        f.write(\"Failed Downloads:\\n\")\n",
@@ -305,7 +306,7 @@
    "source": [
     "id_file = \"Node_IDs.txt\"  # File containing one ID per line\n",
     "\n",
-    "output_file = \"graph-v3/Additional_Text.txt\"\n",
+    "output_file = \"graph-v2/Additional_Node_Content.txt\"\n",
     "failed_papers = process_papers_parallel(id_file, ranges, output_file)"
    ]
   },
@@ -328,7 +329,7 @@
     "            out.write(f\"{line1.strip()}. {line2.strip()}\\n\")\n",
     "\n",
     "# Example usage:\n",
-    "concatenate_files(\"graph-v3/data-v2.txt\", \"graph-v3/Additional_Text.txt\", \"graph-v3/data-v3.txt\")"
+    "concatenate_files(\"graph-v2/data-v2.txt\", \"graph-v2/Additional_Node_Content.txt\", \"graph-v2/data-v4.txt\")"
    ]
   }
  ],
