--- a/Extract_CS_Papers.ipynb
+++ b/Extract_CS_Papers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import requests\n",
     "import io\n",
     "import re\n",
+    "from tqdm import tqdm  # Ensure proper import\n",
     "from datetime import datetime\n",
     "from concurrent.futures import ProcessPoolExecutor"
    ]
@@ -147,7 +148,7 @@
     "paper_ids = [\"0704.1274\", \"0704.1028\", \"0704.0954\", \"0704.1308\"]\n",
     "successful_retries = []\n",
     "\n",
-    "for paper_id in paper_ids:\n",
+    "for paper_id in paper_ids: # for idx, paper_id in failed_papers[0]:\n",
     "    intro_text = process_pdf(paper_id)\n",
     "    if intro_text:\n",
     "        print(f\"\\n==================================================\")\n",
@@ -190,7 +191,7 @@
     "    except:\n",
     "        return None  # Failed to extract text\n",
     "\n",
-    "def extract_introduction(text, word_limit=400):\n",
+    "def extract_introduction(text, word_limit=500):\n",
     "    lines = text.split(\"\\n\")\n",
     "    introduction_found = False\n",
     "    extracted_text = []\n",
@@ -222,7 +223,9 @@
     "    results = [(i, \"FAILED\") for i in range(start, end)]\n",
     "    failed_papers = [[] for _ in range(3)]  # Track failures: [download, extraction, introduction]\n",
     "    \n",
-    "    for i, paper_id in enumerate(paper_ids, start=start):\n",
+    "    #for i, paper_id in enumerate(paper_ids, start=start):\n",
+    "    for i, paper_id in enumerate(tqdm(paper_ids, total=len(paper_ids), desc=\"Processing Papers\"), start=start):\n",
+    "\n",
     "        pdf_stream = download_pdf(paper_id)\n",
     "        if not pdf_stream:\n",
     "            failed_papers[0].append((i, paper_id))\n",
@@ -242,7 +245,7 @@
     "    \n",
     "    return results, failed_papers\n",
     "\n",
-    "def process_papers_parallel(id_file, ranges, output_file, max_workers=15):\n",
+    "def process_papers_parallel(id_file, ranges, output_file, max_workers=5):\n",
     "    with open(id_file, \"r\") as f:\n",
     "        paper_ids = [line.strip() for line in f if line.strip()]\n",
     "    \n",
@@ -251,6 +254,7 @@
     "    \n",
     "    with ProcessPoolExecutor(max_workers=max_workers) as executor:\n",
     "        future_to_range = {executor.submit(process_range, paper_ids[r[0]:r[1]], r[0], r[1]): r for r in ranges}\n",
+    "        \n",
     "        for future in future_to_range:\n",
     "            range_results, range_failures = future.result()\n",
     "            for i, text in range_results:\n",
@@ -258,32 +262,26 @@
     "            for j in range(3):\n",
     "                failed_papers[j].extend(range_failures[j])\n",
     "    \n",
-    "    with open(output_file, \"w\") as f:\n",
-    "        for text in results:\n",
-    "            f.write(text + \"\\n\")\n",
-    "    \n",
-    "    with open(\"Failed_papers.txt\", \"w\") as f:\n",
-    "        f.write(\"Failed Downloads:\\n\")\n",
-    "        for idx, pid in failed_papers[0]:\n",
-    "            f.write(f\"{idx}: {pid}\\n\")\n",
-    "        f.write(\"\\nFailed Extraction:\\n\")\n",
-    "        for idx, pid in failed_papers[1]:\n",
-    "            f.write(f\"{idx}: {pid}\\n\")\n",
-    "        f.write(\"\\nFailed Introduction Detection:\\n\")\n",
-    "        for idx, pid in failed_papers[2]:\n",
-    "            f.write(f\"{idx}: {pid}\\n\")\n",
     "\n",
-    "    return failed_papers"
+    "    return failed_papers, results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 5259], [5259, 10518], [10518, 15777], [15777, 21036], [21036, 26295], [26295, 31554], [31554, 36813], [36813, 42072], [42072, 47331], [47331, 52596]]\n"
+     ]
+    }
+   ],
    "source": [
-    "num_ids = 43000\n",
-    "batch_size = int(num_ids / 15)  \n",
+    "num_ids = 52596\n",
+    "batch_size = int(num_ids / 10)  \n",
     "\n",
     "ranges = []\n",
     "\n",
@@ -304,10 +302,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_file = \"Node_IDs.txt\"  # File containing one ID per line\n",
+    "id_file = \"graph-v2/Node_IDs.txt\"  # File containing one ID per line\n",
     "\n",
     "output_file = \"graph-v2/Additional_Node_Content.txt\"\n",
-    "failed_papers = process_papers_parallel(id_file, ranges, output_file)"
+    "failed_papers, results = process_papers_parallel(id_file, ranges, output_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(output_file, \"w\", encoding='utf-8') as f:\n",
+    "        for text in results:\n",
+    "            f.write(text + \"\\n\")\n",
+    "    \n",
+    "with open(\"graph-v2/Failed_papers.txt\", \"w\") as f:\n",
+    "    f.write(\"Failed Downloads:\\n\")\n",
+    "    for idx, pid in failed_papers[0]:\n",
+    "        f.write(f\"{idx}: {pid}\\n\")\n",
+    "    f.write(\"\\nFailed Extraction:\\n\")\n",
+    "    for idx, pid in failed_papers[1]:\n",
+    "        f.write(f\"{idx}: {pid}\\n\")\n",
+    "    f.write(\"\\nFailed Introduction Detection:\\n\")\n",
+    "    for idx, pid in failed_papers[2]:\n",
+    "        f.write(f\"{idx}: {pid}\\n\")"
    ]
   },
   {
